--- a/frontend/web-app/src/pages/Home/Chats.css
+++ b/frontend/web-app/src/pages/Home/Chats.css
@@ -50,7 +50,7 @@
   
   .chat-form button {
     padding: 0.5rem 1rem;
-    background-color: #140814;
+    background-color: #ff6b81;
     color: white;
     border: none;
     border-radius: 8px;
@@ -58,7 +58,7 @@
   }
   
   .chat-form button:hover {
-    background-color: #6c4372;
+    background-color: #ff6b81;
   }
   
   /* Message styles */
@@ -74,13 +74,13 @@
   
   .message.sent {
     align-self: flex-end;
-    background-color: #a783bc;
+    background-color: #f7adb8;
     color: white;
   }
   
   .message.received {
     align-self: flex-start;
-    background-color: #c8a2c8;
+    background-color: #f7adb8;
     color: black;
   }
   
@@ -100,12 +100,12 @@
   }
   
   .sent p {
-    background-color: #7a4d7c; /* Purple background for sender's message */
+    background-color: #f7adb8; /* Purple background for sender's message */
     color: white; /* White text color for better contrast */
   }
  .sign-out{
     width: 7rem;
-    background-color: #411d41;
+    background-color: #ff6b81;
     color: #f1e3ff;
     border-radius: 20px 20px;
  }
@@ -113,17 +113,17 @@
     width: 100%;
     height: 3rem;
     border-radius: 15px 15px;
-    box-shadow: 4px 20px 40px #353135;
+    box-shadow: 4px 2px 4px #353135;
 
  }
  .sending{
     margin-top: 3rem;
     margin-bottom: 5rem;
-    background-color: #411d41;
+    background-color: #ff6b81;
     color: #f1e3ff;
     border-radius: 20px 20px;
     width: 5rem;
-    box-shadow: 4px 20px 40px #353135;
+    box-shadow: 4px 10px 25px #353135;
     display: flex;
     justify-content: center;
     align-items: center;
